test/expected/explain_+o_exclam_eq_rck_rk++delete.out
struct S; explain S& S::operator!=(S const&) = delete
          ^
11: error: "delete" can be used only for special member functions
